--- a/tabela.html
+++ b/tabela.html
@@ -18,26 +18,9 @@
         <main>
             <section>
                 <h2>Tabela:</h2>
-                <table id="tabela" class="tabela">
-                    <tr>
-                        <td>
-                            <p>
-                                <span>Jogo1</span>
-                                <span>Data/hora</span>
-                            </p>
-                            <p>
-                                <span>Time A</span>
-                                <img src="Imagens/Bandeiras/Time A.png" alt="" class="placar" >
-                                <input type="number" name="" id="" class="placar" min="0">
-                                <span> X </span>
-                                <input type="number" name="" id="" class="placar" min="0">
-                                <img src="Imagens/Bandeiras/Time B.png" alt="" class="placar" >
-                                <span>Time B</span>
-                                
-                            </p>
-                        </td>
-                    </tr>
-                </table>
+                <div id="tabela" class="tabela">
+                    A tabela será montada aqui
+                </div>
 
             
             </section>
