--- a/tabela.html
+++ b/tabela.html
@@ -10,10 +10,16 @@
     <body>
         <header>
             <h1>Bolão Copa - 2022</h1>
-            <p>Infome seu nome completo: <input type="text" name="" id="nome-completo" class="texto"> </p>
-            <p>Cidade: <input type="text" name="" id="cidade" class="texto"><input type="button" value="Enviar" class="texto"> </p>
-            <p>Celular: <input type="tel" name="" id="celular"> E-mail: <input type="text" name="" id="e-mail" class="texto"> </p>
-            <p>Deseja participar do grupo do bolão no whatsapp? <input type="checkbox" name="Não" id="Sim-Não" checked >Sim<input type="checkbox" name="Não" id="Sim-Não" >Não</p>
+            <p><label for="nome-completo">Infome seu nome completo: </label> <input type="text" name="" id="nome-completo" class="texto" placeholder="Digite seu nome completo"> </p>
+            <p><label for="cidade">Cidade: </label> <input type="text" name="" id="cidade" class="texto" Placeholder="Cidade"> </p>
+            <p><label>Celular:  <input type="tel" name="" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX"></label></p>
+            <p><label for="email">E-mail: </label> <input type="email" name="texto" class="texto" id="email" placeholder="Digite seuemail@email.com"></p>
+            <p> 
+                <label for="Sim-Não">Deseja participar do grupo do bolão no whatsapp? </label>
+                <input type="radio" name="Não" id="Sim-Não" checked >Sim
+                <input type="radio" name="Não" id="Sim-Não" >Não
+                <input type="button" value="Enviar" class="texto">
+            </p>
             
 
         </header>
