--- a/tabela.html
+++ b/tabela.html
@@ -26,8 +26,9 @@
                 <input type="button" value="Enviar" class="botao" id="btn-enviar">
             </p>
             <p> 
-                <label for="concordo">Li e concordo com as regras do bolão </label>
-                <input type="checkbox" name="comcordo" id="concordo" >
+                <a href="regras.html">a</a>
+                <a href="regras.html"><label for="concordo">Li e concordo com as regras do bolão </label></a>
+                <input type="checkbox" name="concordo" id="concordo1" >
                 <input type="button" value="Ver Regras" class="botao" id="btn-enviar">
             </p>
 
