--- a/regras.html
+++ b/regras.html
@@ -19,9 +19,9 @@
         <li>O campeão será aquele com maior pontuação, somando os resultados dos jogos da primeira fase.</li>
         <li>Critérios de desempate: Em caso de pontuação igual, o desempate dar-se-á pelos seguintes critérios nesta ordem:
             <ol>
-                <li>Acerto do campeão</li>
-                <li>Acerto do vice-campeão</li>
-                <li>Acerto do terceiro colocado</li>
+                <li>Acerto do campeão;</li>
+                <li>Acerto do vice-campeão;</li>
+                <li>Acerto do terceiro colocado;</li>
                 <li>maior número de placares corretos;</li>
                 <li>maior número de resultados corretos;</li>
                 <li>sorteio</li>
