--- a/tabela.html
+++ b/tabela.html
@@ -26,11 +26,22 @@
                 <input type="button" value="Enviar" class="botao" id="btn-enviar">
             </p>
             <p> 
-                <a href="regras.html">a</a>
-                <a href="regras.html"><label for="concordo">Li e concordo com as regras do bolão </label></a>
-                <input type="checkbox" name="concordo" id="concordo1" >
-                <input type="button" value="Ver Regras" class="botao" id="btn-enviar">
+                <label for="concordo">Li e concordo com as regras do bolão </label>
+                <input type="checkbox" name="concordo" id="concordo" >
+                <a href="regras.html"><input type="button" value="Ver Regras" class="botao" id="btn-enviar"></a>
             </p>
+            <p>Informe quem será o campeão da Copa do Mundo de 2022:</p>
+            <select name="campeao" class="texto" id="campeao">
+                <option value=""></option>
+            </select>
+            <p>Informe quem será o vice-campeão da Copa do Mundo de 2022:</p>
+            <select name="vice-campeao" class="texto" id="vice-campeao">
+                <option value=""></option>
+            </select>
+            <p>Informe quem será o terceiro colocado da Copa do Mundo de 2022:</p>
+            <select name="terceiro" class="texto" id="terceiro">
+                <option value=""></option>
+            </select>
 
          
         </header>
