--- a/regras.html
+++ b/regras.html
@@ -5,18 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regras do Bolão</title>
+    <link rel="stylesheet" href="Estilo/regras.css">
 </head>
 <body>
     <a href="tabela.html">Voltar para a tabela</a>
     <h1>Regras do bolão da Copa do Mundo de 2022 - Primeira fase:</h1>
-    <p>O presente bolão apresenta as seguintes regras: </p>
+    <h2>O presente bolão apresenta as seguintes regras: </h2>
     <ol>
         <li>Quem acertar o placar exato do jogo ganhará 10 pontos. Exemplo: Para o jogo Itália 2X1 Chile, somente o resultado de 2x1 para a Itália dará 10 pontos.</li>
         <li>Quem acertar o resultado do jogo e também o número de gols de apenas uma das equipes, ganhará 7 pontos. Para Egito 2x1 Uruguai, resultados de vitória para o Egito como 3x1, 4x1, 2x0 darão 7 pontos.</li>
         <li>Quem acertar o resultado do jogo e errar o número de gols das duas equipes ganhará 5 pontos. Exemplo: Egito 2x1 Uruguai, resultados como 3x2, 3x0, 4x2 darão 5 pontos.</li>
         <li>Quem acertar apenas o número de gols de apenas uma das equipes e errar o resultado do jogo, ganhará 2 pontos. Exemplo: Egito 2x1 Uruguai, resultados como 1x1, 2x2, 0x1, 2x3 darão 2 pontos.</li>
         <li>Os jogos do Brasil terão pontuação dobrada, ou seja, os quatro itens anteriores terão pontuação de 20, 14, 10 e 4 pontos, respectivamente.</li>
-        <li>O campeão será aquele com maior pontuação, somando os resultados dos jogos da primeira fase.</li>
+        <li>Pontuação extra - os participantes terão a seguinte pontuação extra, se acertarem:
+            <ul>
+                <li>Campeão - 40 pontos;</li>
+                <li>Vice-Campeão - 25 pontos;</li>
+                <li>Terceiro colocado - 15 pontos;</li>
+                <li>Quarto colocado - 10 pontos.</li>
+
+            </ul>
+        </li>    
+
+        <li>O campeão será aquele com maior pontuação, somando os resultados dos jogos da primeira fase com a pontuação extra, detalhada no item 6.</li>
         <li>Critérios de desempate: Em caso de pontuação igual, o desempate dar-se-á pelos seguintes critérios nesta ordem:
             <ol>
                 <li>Acerto do campeão;</li>
@@ -24,11 +35,23 @@
                 <li>Acerto do terceiro colocado;</li>
                 <li>maior número de placares corretos;</li>
                 <li>maior número de resultados corretos;</li>
-                <li>sorteio</li>
+                <li>sorteio.</li>
             </ol>
         </li>
+        <li>O valor da aposta será de R$50,00.</li>
+        <li>O pagamento será feito via pix pelo chave celular (35)99982-7930.</li>
+        <li>Doação: 20% de todo valor arrecadado será doado à instituição Baby Kit</li>
+        <li>Premiação:
+            <ul>
+                <li>Campeão - 50% do valor arrecadado;</li>
+                <li>Segundo Colocado - 20% do valor arrecadado;</li>
+                <li>Terceiro Colocado - 10% do valor arrecadado;</li>
+
+            </ul> 
+        <li>O Valor arrecadado e o valor da premiação serão divulgados no dia 14/06/2022.</li>
+        <li>Valerão para este bolão apenas os 48 jogos da primeira fase do mundial e os palpites de campeão, vice, terceiro e quarto colocados.
+            Para questões não previstas, Paulo César de Carvalho :) , o será soberano nas decisões polêmicas, as quais não poderão sequer ser contestadas.</li>
         
-        
 
 
 
@@ -36,9 +59,8 @@
 
 
 
-Premiação: o campeão embolsará 60% do valor arrecadado; o segundo 25% e o terceiro 15%. O Valor arrecadado e o valor da premiação serão divulgados no dia 14/06/2018.
-Valerão para este bolão apenas os 48 jogos da primeira fase do mundial e os palpites de campeão, vice, terceiro e quarto colocados.
-Para questões não previstas, Paulo César de Carvalho :) , o será soberano nas decisões polêmicas, as quais não poderão sequer ser contestadas.
+
+
 
     </ol>
 </body>
