--- a/tabela.html
+++ b/tabela.html
@@ -17,8 +17,8 @@
             <p><label for="email">E-mail: </label> <input type="email" name="texto" class="texto" id="email" placeholder="Digite seuemail@email.com"></p>
             <p> 
                 <label for="Sim-Não">Deseja participar do grupo do bolão no whatsapp? </label>
-                <input type="radio" name="Não" id="Sim-Não" checked >Sim
-                <input type="radio" name="Não" id="Sim-Não" >Não
+                <input type="radio" name="Sim-Não" id="Sim-whatsapp" checked >Sim
+                <input type="radio" name="Sim-Não" id="Não-whatsapp" >Não
                 <input type="button" value="Enviar" class="botao" id="btn-enviar">
             </p>
             <p> 
@@ -39,6 +39,11 @@
             </p>
             <p>Informe quem será o <strong>terceiro colocado</strong>  da Copa do Mundo de 2022:
                 <select name="terceiro" class="texto" id="terceiro">
+                    <option value=""></option>
+                </select>
+            </p>
+            <p>Informe quem será o <strong>quarto colocado</strong>  da Copa do Mundo de 2022:
+                <select name="quarto" class="texto" id="quarto">
                     <option value=""></option>
                 </select>
             </p>
