--- a/regras.html
+++ b/regras.html
@@ -39,7 +39,7 @@
             </ol>
         </li>
         <li>O valor da aposta será de R$50,00.</li>
-        <li>O pagamento será feito via pix pelo chave celular (35)99982-7930.</li>
+        <li>O pagamento será feito via pix pelo chave celular (35)99982-7930 ou pelo QR code abaixo.</li>
         <li>Doação: 20% de todo valor arrecadado será doado à instituição Baby Kit</li>
         <li>Premiação:
             <ul>
@@ -51,6 +51,8 @@
         <li>O Valor arrecadado e o valor da premiação serão divulgados no dia 14/06/2022.</li>
         <li>Valerão para este bolão apenas os 48 jogos da primeira fase do mundial e os palpites de campeão, vice, terceiro e quarto colocados.
             Para questões não previstas, Paulo César de Carvalho :) , o será soberano nas decisões polêmicas, as quais não poderão sequer ser contestadas.</li>
+            <img src="Auxiliar/QR_Code_Pix.png" alt="QR Code do pagamento do Pix">
+            
         
 
 
