--- a/tabela.html
+++ b/tabela.html
@@ -13,7 +13,10 @@
             <h1>Bolão Copa - 2022</h1>
             <p><label for="nome-completo">Infome seu nome completo: </label> <input type="text" name="" id="nome-completo" class="texto" placeholder="Digite seu nome completo aqui"> </p>
             <p><label for="cidade">Informe sua cidade: </label> <input type="text" name="" id="cidade" class="texto" Placeholder="Digite sua cidade aqui"> </p>
-            <p><label>Informe seu celular:  <input type="tel" name="" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" maxlength="17"></label></p>
+            <p>
+                <label>Informe seu celular:  <input type="tel" name="" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" maxlength="17"></label>
+                <input type="button" value="Apagar celular" id="btn-apagar-celular" class="invisivel">
+            </p>
             <p><label for="email">Infome seu e-mail: </label> <input type="email" name="texto" class="texto" id="email" placeholder="Digite seu e-mail aqui"></p>
             <p> 
                 <label for="Sim-Não">Deseja participar do grupo do bolão no whatsapp? </label>
