--- a/regras.html
+++ b/regras.html
@@ -16,7 +16,7 @@
             <ul>
                 <li> 20 pontos - Para o participante que acertar o placar exato em jogos <strong>com seis ou mais gols</strong> . Exemplo: para Itála 6 X 1 Chile, apenas o palpite Itália 6 X 1 Chile resulta em vinte pontos;
                     <ul>
-                        <li>Exemplo de placares que a atendem esse quesito: 6 X 0 ou mais, 5 X 1 ou mais, 4 X 2 ou mais, qualquer empate de 3 X 3 para cima, etc.
+                        <li>Exemplo de placares que a atendem esse quesito: 6 X 0 ou mais, 5 X 1 ou mais, 4 X 2 ou mais, qualquer igual ou superior a 3 X 3, etc.
 
                         </li>
                     </ul>
@@ -53,7 +53,8 @@
             </ol>
         </li>
         <li>O valor de cada aposta será de R$50,00 e o pagamento deverá ser feito via pix pela chave celular (35)99982-7930 ou pelo QR code abaixo.</li>
-        <li>Doação: 20% de todo valor arrecadado será doado à instituição Baby Kit</li>
+        <li>Doação: 20% de todo valor arrecadado será doado à instituição <a href="https://www.instagram.com/babykitpa/" target="_blank" rel="noopener noreferrer">Baby Kit</a> </li>
+
         <li>Premiação:
             <ul>
                 <li>Campeão - 50% do valor arrecadado;</li>
@@ -68,7 +69,7 @@
             
         </li>
         <li>
-            Para questões não previstas, Paulo César de Carvalho :) , o será soberano nas decisões polêmicas, as quais não poderão sequer ser contestadas.
+            Para questões não previstas, Paulo César de Carvalho :) , será soberano nas decisões polêmicas, as quais não poderão sequer serem contestadas.
         </li>
             <img src="Auxiliar/QR_Code_Pix.png" alt="QR Code do pagamento do Pix">
             
