--- a/tabela.html
+++ b/tabela.html
@@ -16,20 +16,20 @@
         </header>    
         <main>
             <form action=" https://tales-h-carvalho-b8493ln6edxm62xt.socketxp.com/aposta" method="post">
-                <p class="dados-pessoais"><label for="nome-completo">Informe seu nome completo: </label> <input type="text" name="" id="nome-completo" class="texto" placeholder="Digite seu nome completo aqui"> </p>
-                <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="" id="cidade" class="texto" Placeholder="Digite sua cidade aqui"> </p>
+                <p class="dados-pessoais"><label for="nome-completo">Informe seu nome completo: </label> <input type="text" name="nome-completo" id="nome-completo" class="texto" placeholder="Digite seu nome completo aqui"> </p>
+                <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="cidade" id="cidade" class="texto" Placeholder="Digite sua cidade aqui"> </p>
                 <p  class="dados-pessoais">
-                    <label>Informe seu celular:  <input type="tel" name="" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" maxlength="17"></label>
+                    <label>Informe seu celular:  <input type="tel" name="celular" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" maxlength="17"></label>
                     <input type="button" value="Apagar celular" id="btn-apagar-celular" class="invisivel">
                 </p>
-                <p  class="dados-pessoais"><label for="email">Infome seu e-mail: </label> <input type="email" name="texto" class="texto" id="email" placeholder="Digite seu e-mail aqui"></p>
+                <p  class="dados-pessoais"><label for="email">Infome seu e-mail: </label> <input type="email" name="texto" class="e-mail" id="email" placeholder="Digite seu e-mail aqui"></p>
                 <p  class="dados-pessoais"> 
-                    <label for="Sim-Não">Deseja participar do grupo do bolão no whatsapp? </label>
-                    <input type="radio" name="Sim-Não" id="Sim-whatsapp" checked >Sim
-                    <input type="radio" name="Sim-Não" id="Não-whatsapp" >Não
+                    <label for="grupo-whatsapp">Deseja participar do grupo do bolão no whatsapp? </label>
+                    <input type="radio" name="grupo-whatsapp-sim" id="Sim-whatsapp" checked >Sim
+                    <input type="radio" name="grupo-whatsapp-sim" id="Não-whatsapp" >Não
                 </p>
                 <p  class="dados-pessoais"> 
-                    <input type="checkbox" name="concordo" id="concordo">
+                    <input type="checkbox" name="concordo-regras" id="concordo">
                     <label for="concordo">Li e concordo com as regras do bolão </label>
                     <a href="regras.html">Clique aqui para ler as regras do bolão</a>
                 </p>
