--- a/tabela.html
+++ b/tabela.html
@@ -16,7 +16,7 @@
         </header>    
         <main>
             <form action=" https://tales-h-carvalho-b8493ln6edxm62xt.socketxp.com/aposta" method="post">
-                <p class="dados-pessoais"><label for="nome-completo">Informe seu nome completo: </label> <input type="text" name="nome-completo" id="nome-completo" class="texto" placeholder="Digite seu nome completo aqui"> </p>
+                <p class="dados-pessoais"><label for="nome-completo">Informe seu nome completo: </label> <input type="text" name="nome" id="nome-completo" class="texto" placeholder="Digite seu nome completo aqui"> </p>
                 <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="cidade" id="cidade" class="texto" Placeholder="Digite sua cidade aqui"> </p>
                 <p  class="dados-pessoais">
                     <label>Informe seu celular:  <input type="tel" name="celular" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" maxlength="17"></label>
