--- a/regras.html
+++ b/regras.html
@@ -42,7 +42,7 @@
         
         <li>O campeão será aquele com maior pontuação, somando os resultados dos jogos da primeira fase com a pontuação resultante dos palpites dos semifinalistas.</li>
         <li>Critérios de desempate: Em caso de pontuação igual, o desempate dar-se-á pelos seguintes critérios nesta ordem:
-            <ol>
+            <ol class="romano">
                 <li>Acerto do campeão;</li>
                 <li>Acerto do vice-campeão;</li>
                 <li>Acerto do terceiro colocado;</li>
