--- a/tabela.html
+++ b/tabela.html
@@ -22,7 +22,7 @@
                     <label>Informe seu celular:  <input type="tel" name="celular" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" maxlength="17"></label>
                     <input type="button" value="Apagar celular" id="btn-apagar-celular" class="invisivel">
                 </p>
-                <p  class="dados-pessoais"><label for="email">Infome seu e-mail: </label> <input type="email" name="texto" class="e-mail" id="email" placeholder="Digite seu e-mail aqui"></p>
+                <p  class="dados-pessoais"><label for="email">Infome seu e-mail: </label> <input type="email" name="e-mail" class="texto" id="email" placeholder="Digite seu e-mail aqui"></p>
                 <p  class="dados-pessoais"> 
                     <label for="grupo-whatsapp">Deseja participar do grupo do bolão no whatsapp? </label>
                     <input type="radio" name="grupo-whatsapp-sim" id="Sim-whatsapp" checked >Sim
@@ -59,6 +59,8 @@
                 </p>
             
                 <section id="tabela" class="tabela"></section>
+
+                <input type="button" value="Validar" class="botao" id="btn-validar">
 
                 <p>Confira todos os dados e clique em enviar:   
                     <input type="submit" value="Enviar" class="botao" id="btn-enviar">
