--- a/tabela.html
+++ b/tabela.html
@@ -20,7 +20,7 @@
             <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="cidade" id="cidade" class="texto" Placeholder="Digite sua cidade aqui"> </p>
             <p  class="dados-pessoais">
                 <label>Informe seu celular:  <input type="tel" name="celular" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" required maxlength="17"></label>
-                <input type="button" value="Apagar celular" id="btn-apagar-celular" class="invisivel">
+                
             </p>
             <p  class="dados-pessoais"><label for="email">Infome seu e-mail: </label> <input type="email" name="e-mail" class="texto" id="email" placeholder="Digite seu e-mail aqui"></p>
             <p  class="dados-pessoais"> 
@@ -30,7 +30,7 @@
             </p>
             <p  class="dados-pessoais"> 
                 <input type="checkbox" name="concordo-regras" id="concordo" required>
-                <label for="concordo">Li e concordo com as regras do bolão </label>
+                <label for="concordo">Li e concordo com as regras do bolão </label><br>
                 <a href="regras.html">Clique aqui para ler as regras do bolão</a>
             </p>
             <p class="dados-pessoais">Selecione o <strong>campeão</strong>  da Copa do Mundo de 2022:
