--- a/regras.html
+++ b/regras.html
@@ -55,7 +55,7 @@
                     </ol>
                 </li>
                 <li>O valor de cada aposta será de <strong>R$50,00</strong>  e o pagamento poderá ser feito via pix pela chave celular (35)99982-7930 ou pelo QR code abaixo.</li>
-                <li>Doação: 20% de todo valor arrecadado será doado à instituição <a href="https://www.instagram.com/babykitpa/" target="_blank" rel="noopener noreferrer">Baby Kit</a> </li>
+                <li>Doação: 20% de todo valor arrecadado será doado à instituição <a href="https://www.instagram.com/babykitpa/" target="_blank" rel="noopener noreferrer">Baby Kit</a>. </li>
         
                 <li>Premiação:
                     <ul>
