--- a/tabela.html
+++ b/tabela.html
@@ -13,11 +13,13 @@
     <header>
         
         <h1>Bolão Copa do Mundo - Catar - 2022</h1>
+        <h2 id="encerramento"></h2>
+        <h2><a href="https://paulo-cesar-de-carvalho.github.io/TodasAsCopas/" target="_blank" rel="noopener noreferrer">Inspire-se em outras Copas</a></h2>
     </header>    
     <main>
-        <form action=" https://tales-h-carvalho-b8493ln6edxm62xt.socketxp.com/aposta" method="post">
-            <p class="dados-pessoais"><label for="nome-completo" >Informe seu nome completo: </label> <input type="text" name="nome" id="nome-completo" class="texto" required placeholder="Digite seu nome completo aqui"> </p>
-            <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="cidade" id="cidade" class="texto" Placeholder="Digite sua cidade aqui"> </p>
+        <form action=" https://tales-h-carvalho-b8493ln6edxm62xt.socketxp.com/aposta" method="post" autocomplete="on">
+            <p class="dados-pessoais"><label for="nome-completo" >Informe seu nome completo: </label> <input type="text" name="nome" id="nome-completo" class="texto" required placeholder="Digite seu nome completo aqui" autocomplete="name">  </p>
+            <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="cidade" id="cidade" class="texto" Placeholder="Digite sua cidade aqui" > </p>
             <p  class="dados-pessoais">
                 <label>Informe seu celular:  <input type="tel" name="celular" id="celular" class="texto" Placeholder="(XX) XXXXX - XXXX" required maxlength="17"></label>
                 
