--- a/tabela.html
+++ b/tabela.html
@@ -14,7 +14,7 @@
         
         <h1>Bolão Copa do Mundo - Catar - 2022</h1>
         <h2 id="encerramento"></h2>
-        <h2><a href="https://paulo-cesar-de-carvalho.github.io/TodasAsCopas/" target="_blank" rel="noopener noreferrer">Inspire-se em outras Copas</a></h2>
+        <h2><a href="https://paulo-cesar-de-carvalho.github.io/TodasAsCopas/" target="_blank" rel="noopener noreferrer">Inspire-se em outras Copas clicando aqui</a></h2>
     </header>    
     <main>
         <form action=" https://tales-h-carvalho-b8493ln6edxm62xt.socketxp.com/aposta" method="post" autocomplete="on">
