Implementação inicial da página de classificação

--- a/classificacao.html
+++ b/classificacao.html
@@ -5,11 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classificação do Bolão</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Estilo/estilo.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/id_jogos.js"></script>
+    <script src="js/selecoes.js"></script>
+    <script src="js/apostas.js"></script>
+    <script src="js/classificacao.js"></script>
 </head>
 <body>
     <header>
-        <h1>Em construção</h1>
+        <h1>Classificação Parcial do Bolão</h1>
     </header>
+
+    <table class="table table-sm table-dark table-striped">
+        <!-- <caption>Tabela atualizada em ?</caption> -->
+        <thead>
+            <th>Pos</th>
+            <th>Nome</th>
+            <th>Pts</th>
+            <th>Placar</th>
+            <th>Resultado</th>
+        </thead>
+        <tbody id="tbodyClassificacao">
+        </tbody>
+    </table>
+
+    <h2>Resultados Oficiais</h2>
+    <section class="tabela" id="resultados-oficiais"></section>
+
+    <footer>
+        <h2>
+            Se tiver algum problema nesta página, favor encher o saco do Tales no WhatsApp até ele corrigir: (35) 99961-8819
+        </h2>
+    </footer>
     
 </body>
 </html>
