--- a/tabela.html
+++ b/tabela.html
@@ -7,6 +7,11 @@
     <title>Bolão Copa 2022</title>
     <link rel="icon" href="Auxiliar/images.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="Estilo/estilo.css">
+    <style>
+        *{
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
