Separado funções de cálculo comum

--- a/classificacao.html
+++ b/classificacao.html
@@ -12,6 +12,7 @@
     <script src="js/id_jogos.js"></script>
     <script src="js/selecoes.js"></script>
     <script src="js/apostas.js"></script>
+    <script src="js/calculos.js"></script>
     <script src="js/classificacao.js"></script>
 </head>
 <body>
