Variação de posições

--- a/classificacao.html
+++ b/classificacao.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classificação do Bolão</title>
+    <link rel="icon" href="Auxiliar/images.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="Estilo/estilo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -23,6 +24,7 @@
     <table class="table table-sm table-dark table-striped">
         <!-- <caption>Tabela atualizada em ?</caption> -->
         <thead>
+            <th>Var</th>
             <th>Pos</th>
             <th>Nome</th>
             <th>Pts</th>
