--- a/Oitavas/regrasOitavas.html
+++ b/Oitavas/regrasOitavas.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regras oitavas-de-final</title>
-    <link rel="stylesheet" href="Estilo/regras.css">
+    <link rel="stylesheet" href="../Estilo/regras.css">
 </head>
 <body>
     <header>
-        <a href="tabelaOitavas.html">Voltar para a tabela</a>
+        <a href="../Oitavas/tabelaOitavas.html">Voltar para a tabela</a>
         <h1>Regras do bolão da Copa do Mundo de 2022 - oitavas-de-final:</h1>
     </header>
     <main>
@@ -33,17 +33,9 @@
                     <ol class="romano">
                         <li>maior número de placares exatos;</li>
                         <li>maior número de resultados corretos;</li>
-                        <li>
-                            <ol>ordem de envio das apostas, por faixa de período, conforme tabela:
-                                <li>Faixa 1 - até às 21:00 de 02/12/2022 </li>
-                                <li>Faixa 2 - até às 23:00 de 02/12/2022</li>
-                                <li>Faixa 3 - até às 8:00 de 03/12/2022</li>
-                                <li>Faixa 4 - até às 10:00 de 03/12/2022 </li>
-                                <li>Faixa 5 - até às 11:00 de 03/12/2022</li>
-                            </ol> 
-                                Será considerado horário de Brasília e o horário registrado é o momento do efetivo envio dos palpites através do site do bolão.
-                        </li>
+                        
                     </ol>
+                    <p>permanecendo empatadado, o valor será dividio entre os campeões</p>
                 </li>
                 <li>O valor de cada aposta será de <strong>R$30,00</strong>  e o pagamento poderá ser feito via pix pela chave celular (35)99982-7930 ou pelo QR code abaixo.</li>
                 <li>Doação: 35% de todo valor arrecadado será doado à instituição <a href="https://www.instagram.com/babykitpa/" target="_blank" rel="noopener noreferrer">Baby Kit</a>. </li>
