--- a/Oitavas/tabelaOitavas.html
+++ b/Oitavas/tabelaOitavas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolão Oitavas</title>
-    <link rel="icon" href="Auxiliar/images.jpeg" type="image/x-icon">
+    <link rel="icon" href="../Auxiliar/Taça Catar.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../Estilo/estilo.css">
     <link rel="stylesheet" href="styleOitavas.css">
    
