--- a/regras.html
+++ b/regras.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="tabela.html">Voltar para a tabela</a>
+        <a href="../TabelaBolao/Oitavas/tabelaOitavas.html">Voltar para a tabela</a>
         <h1>Regras do bolão da Copa do Mundo de 2022 - Primeira fase:</h1>
     </header>
     <main>
