--- a/Oitavas/regrasOitavas.html
+++ b/Oitavas/regrasOitavas.html
@@ -35,7 +35,7 @@
                         <li>maior número de resultados corretos;</li>
                         
                     </ol>
-                    <p> * permanecendo o empoate o valor será dividio entre os campeões</p>
+                    <p> * permanecendo o empate o valor será dividio entre os campeões</p>
                 </li>
                 <li>O valor de cada aposta será de <strong>R$30,00</strong>  e o pagamento poderá ser feito via pix pela chave celular (35)99982-7930.</li>
                 <li>Doação: 35% de todo valor arrecadado será doado à instituição <a href="https://www.instagram.com/babykitpa/" target="_blank" rel="noopener noreferrer">Baby Kit</a>. </li>
