Correções na classificação - resultados oficiais

--- a/Oitavas/classificacaoOitavas.html
+++ b/Oitavas/classificacaoOitavas.html
@@ -14,11 +14,12 @@
     <script src="../js/selecoes.js"></script>
     <script src="apostasOitavas.js"></script>
     <script src="../js/calculos.js"></script>
-    <script src="../js/classificacao.js"></script>
+    <script src="classificacaoOitavas.js"></script>
+    <script src="jogosOitavas.js"></script>
 </head>
 <body>
     <header>
-        <h1>Classificação Parcial do Bolão</h1>
+        <h1>Classificação Parcial do Bolão das Oitavas</h1>
     </header>
 
     <table class="table table-sm table-dark table-striped">
