--- a/Oitavas/tabelaOitavas.html
+++ b/Oitavas/tabelaOitavas.html
@@ -72,6 +72,7 @@
     <script src="../js/selecoes.js"></script>
     <script src="../js/tabela.js"></script>
     <script src="tabelaOitavas.js"></script>
+    <script src="jogosOitavas.js"></script>
     <script src="../js/envio.js"></script>
     
 
