Cores primárias da pág de classificação oitavas

--- a/Oitavas/classificacaoOitavas.html
+++ b/Oitavas/classificacaoOitavas.html
@@ -16,6 +16,12 @@
     <script src="../js/calculos.js"></script>
     <script src="classificacaoOitavas.js"></script>
     <script src="jogosOitavas.js"></script>
+    <style>
+        :root{
+            --cor-primaria: #9c8819;
+            --cor-primaria-escura: #52480d;
+        }
+    </style>
 </head>
 <body>
     <header>
