--- a/Oitavas/classificacaoOitavas.html
+++ b/Oitavas/classificacaoOitavas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classificação Oitavas</title>
-    <link rel="icon" href="Auxiliar/images.jpeg" type="image/x-icon">
+    <link rel="icon" href="../Auxiliar/images.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Estilo/estilo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
