--- a/Quartas/tabelaQuartas.html
+++ b/Quartas/tabelaQuartas.html
@@ -20,7 +20,7 @@
         <h2><a href="https://paulo-cesar-de-carvalho.github.io/TodasAsCopas/" target="_blank" rel="noopener noreferrer">Inspire-se em outras Copas clicando aqui</a></h2>
     </header>    
     <main>
-        <form action="http://ec2-18-219-194-232.us-east-2.compute.amazonaws.com:3000/aposta" method="post" autocomplete="on">
+        <form action="http://ec2-18-219-194-232.us-east-2.compute.amazonaws.com:3000/aposta" method="post">
             <p class="dados-pessoais"><label for="nome-completo" >Informe seu nome completo: </label> <input type="text" name="nome" id="nome-completo" class="texto" required placeholder="Digite seu nome completo aqui" autocomplete="name">  </p>
             <p  class="dados-pessoais"><label for="cidade">Informe sua cidade: </label> <input type="text" name="cidade" id="cidade" class="texto" Placeholder="Digite sua cidade aqui" > </p>
             <p  class="dados-pessoais">
